<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">路比</string>
    <string name="title_activity_login">登陆</string>
    <string name="fragment_login_autocompletetextview_user_name">手机号</string>
    <string name="fragment_login_edittext_user_password">密码</string>
    <string name="fragment_login_checkbox_save_password">保存密码</string>
    <string name="fragment_login_checkbox_auto_login">自动登录</string>
    <string name="fragment_login_button_login">立即登录</string>
    <string name="fragment_login_textview_forgot_password">忘记密码？</string>
    <string name="fragment_login_textview_register">立即注册？</string>
    <string name="edit_info">修改信息</string>
    <string name="submit_edit">提交修改</string>
    <string name="custom_regulations">自定义查询</string>
    <string name="fragment_logo_imageview_contentDescription">广告</string>
    <string name="fragment_logo_button_login">登陆</string>
    <string name="button_register">注册</string>
    <string name="sex">性别</string>
    <string name="send_vertifh_code">发送验证码</string>
    <string name="hello_blank_fragment">这就是主页面了</string>
    <string name="title_activity_register">注册</string>
    <string name="register_basic_info_fragment_register_method_account">账户注册</string>
    <string name="register_basic_info_fragment_register_method_mobile">手机注册</string>
    <string name="register_basic_info_fragment_register_method_email">邮箱注册</string>
    <string name="register_basic_info_fragment_method_account_newaccount">新用户名</string>
    <string name="mobile_number">手机号码</string>
    <string name="security_code">验证码</string>
    <string name="register_basic_info_fragment_method_mobile_send_security_code">发送验证码</string>
    <string name="register_basic_info_fragment_method_email_address">邮箱</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register_now">立即注册</string>
    <string name="nickname">昵称</string>
    <string name="register_detail_info_fragment_sex">性别</string>
    <string name="register_detail_info_fragment_sex_men">男</string>
    <string name="register_detail_info_fragment_sex_women">女</string>
    <string name="register_detail_info_fragment_birthday">生日</string>
    <string name="register_detail_info_fragment_submit">提交修改</string>
    <string name="fragment_drawer_menu_function_carinfos">车辆</string>
    <string name="title_activity_city_list">城市</string>
    <string name="title_activity_regulation_result">违章</string>
    <string name="csy_form_tip">目前仅支持小型汽车查询</string>
    <string name="csy_btn_query">开始查询</string>
    <string name="csy_cxdz_lab">查询地</string>
    <string name="csy_cxdz_tip">请选择查询地</string>
    <string name="csy_chepai_lab">车牌号</string>
    <string name="csy_chepai_tip">请输入车牌号后6位</string>
    <string name="csy_chejia_lab">车架号</string>
    <string name="csy_engine_lab">发动机号</string>
    <string name="csy_close">关闭</string>
    <string name="csy_custom_qury">自定义查询</string>
    <string name="main_funcition_regutlation">查询违章信息</string>
    <string name="myinfo">我的信息</string>
    <string name="myorders">我的订单</string>
    <string name="mycars">我的汽车</string>
    <string name="myregulations">我的违章</string>
    <string name="library">曲库</string>
    <string name="playlists">我的列表</string>
    <string name="playing_queue">播放列表</string>
    <string name="now_playing">正在播放</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="help_and_feedback">反馈</string>
    <string name="auto_update">检查更新</string>
    <string name="action_settings">设置</string>
    <string name="songs">歌曲</string>
    <string name="albums">专辑</string>
    <string name="artists">歌手</string>
    <string name="accessibility_play">播放</string>
    <string name="accessibility_pause">暂停</string>
    <string name="accessibility_next">下一曲</string>
    <string name="accessibility_prev">上一曲</string>
    <string name="accessibility_shuffle">随机</string>
    <string name="accessibility_shuffle_all">随机播放全部</string>
    <string name="accessibility_repeat">循环</string>
    <string name="accessibility_repeat_all">全部循环</string>
    <string name="accessibility_repeat_one">单曲循环</string>
    <string name="accessibility_queue">打开播放列表</string>
    <string name="accessibility_browse">浏览音乐</string>
    <string name="menu_sort_by">排序方法</string>
    <string name="sort_order_entry_az">字典序A-Z</string>
    <string name="sort_order_entry_za">字典序Z-A</string>
    <string name="sort_order_entry_artist">歌手</string>
    <string name="sort_order_entry_album">专辑</string>
    <string name="sort_order_entry_year">年份</string>
    <string name="sort_order_entry_track_number">Track Number</string>
    <string name="sort_order_entry_duration">时长</string>
    <string name="sort_order_entry_date_added">添加时间</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">歌曲数</string>
    <string name="sort_order_entry_number_of_albums">歌手数</string>
    <string name="sort_order_entry_filename">文件名</string>
    <string name="error_playing_track">播放出错了</string>
    <string name="playlist_last_added">最新添加</string>
    <string name="playlist_recently_played">最近播放</string>
    <string name="playlist_top_tracks">我的纪录</string>
    <string name="timber_source">Report any bugs <u> here </u> </string>
    <string name="timber_feature_request">Specify any feature request in the Google+ community <u> here </u></string>
    <string name="menu_show_as">查看方式</string>
    <string name="menu_show_as_entry_list">列表</string>
    <string name="menu_show_as_entry_grid">方格</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="last_opened">Last Opened</string>
    <string name="search">搜索</string>
    <string name="action_shuffle_all">全部播放</string>
    <string name="action_equalizer">均衡器</string>
    <string name="search_library">搜索歌曲</string>
    <string name="select_theme">Select Theme</string>
    <string name="choose_theme_throughout">Choose a theme to be used throughout the app.</string>
    <string name="choose_start_page">Choose the start page to be displayed on launch.</string>
    <string name="start_page">Start page</string>
    <string name="artist_in_grid">Artists in Grid</string>
    <string name="toggle_artists_grid">Toggle for displaying artists in a 2x2 grid.</string>
    <string name="toggle_system_animations">Toggle for system animations throughout the app.</string>
    <string name="system_animations">System animations</string>
    <string name="toggle_animations">Toggle for Transition animation throughout the app.</string>
    <string name="animations">Animations</string>
    <string name="now_playing_selector">Choose a now playing screen from 4 different styles.</string>
    <string name="personalisation">Personalisation</string>
    <string name="other">Other</string>
    <string name="advanced">Advanced</string>
    <string name="timber_about_opensource">Timber is a open source Music Player developed by Naman Dwivedi.</string>
    <string name="summary_pause_detach">Toggle for pausing playback when headphone is detached</string>
    <string name="pause_detach">Pause on Detach</string>
    <string name="summary_xposed_trackselector">Requires Xposed and XMediaNotificationTrackSelector Xposed module to be installed. This will provide access to playing queue from the notification bar itself.</string>
    <string name="xposed_trackselector">Playing queue support in notification</string>
    <string name="currently_selected">Currently Selected</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Apply a dark theme throughout the app</string>
    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>
    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>
    <string name="colored_status_bar">Colored Status Bar</string>
    <string name="colored_status_bar_summary">Toggle status bar coloring</string>
    <string name="colored_nav_bar">Colored Navigation Bar</string>
    <string name="colored_nav_bar_summary">Toggle navigation bar coloring</string>
    <string name="count_song"><xliff:g id="count">%d</xliff:g> song</string>
    <string name="count_songs"><xliff:g id="count">%d</xliff:g> songs</string>
    <string name="count_album"><xliff:g id="count">%d</xliff:g> album</string>
    <string name="count_albums"><xliff:g id="count">%d</xliff:g> albums</string>
    <string name="count_artist"><xliff:g id="count">%d</xliff:g> artist</string>
    <string name="count_artists"><xliff:g id="count">%d</xliff:g> artists</string>
    <string name="number_song_add_queue"><xliff:g example="1" id="number">%d</xliff:g> song added to the queue.</string>
    <string name="number_songs_add_queue"><xliff:g example="1" id="number">%d</xliff:g> songs added to the queue.</string>
    <string name="number_song_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> song added to playlist.</string>
    <string name="number_songs_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> songs added to playlist.</string>
    <string name="combine_two_strings" translatable="false">%1$s | %2$s</string>
    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="settings_head_user">用户</string>
    <string name="settings_head_car">车辆</string>
    <string name="settings_head_moregas">加油</string>
    <string name="settings_head_regulation">违章</string>
    <string name="settings_head_navigate">导航</string>
    <string name="settings_head_music">音乐</string>
    <string name="settings_user_straight">直接进入</string>
    <string name="settings_user_straight_info">是否直接进入主界面？</string>
    <string name="settings_regulation_location">进入后定位</string>
    <string name="settings_regulation_location_info">是否通过定位来自动添加位置？</string>
    <string name="settings_music_auto">自动播放音乐</string>
    <string name="settings_music_auto_info">进入App后是否自动播放音乐？</string>
    <string name="settings_car_push">推送消息</string>
    <string name="settings_car_auto_push">是否自动推送消息？</string>
    <string name="settings_music_continue">继续播放音乐</string>
    <string name="settings_music_continue_info">退出App后是否继续播放音乐？</string>
    <string name="image_crop_fragment_sure">确定</string>
    <string name="image_crop_fragment_cancle">取消</string>
    <string name="navigate_tts_type">语音播报模式</string>
    <string name="navigate_tts_type_newman">新手</string>
    <string name="navigate_tts_type_professor">专家</string>
    <string name="navigate_tts_type_none">静音</string>
    <string name="navigate_tts_mode">语音播报内容</string>
    <string name="navigate_tts_mode_eye">电子眼</string>
    <string name="navigate_tts_mode_speed">限速提醒</string>
    <string name="navigate_tts_mode_safe">安全驾驶</string>
    <string name="navigate_tts_mode_condition">前方路况</string>
    <string name="navigate_tts_mode_straght">直行顺行提醒</string>
    <string name="navigate_condition">实时路况</string>
    <string name="navigate_full_condition">全程路况条</string>
    <string name="navigate_day_or_night">夜晚模式</string>
    <string name="navigate_power">省电模式</string>
</resources>