<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fat246.cybercar.activities.Register.StartRegisterActivity">

    <include
        android:id="@+id/activity_start_register_toolbar"
        layout="@layout/my_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Show Progress Bar -->
        <ProgressBar
            android:id="@+id/activity_start_register_progressbar"
            android:layout_width="@dimen/fragment_login_progressbar_size"
            android:layout_height="@dimen/fragment_login_progressbar_size"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/activity_start_register_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.fat246.cybercar.openwidgets.CircleImageView
                    android:id="@+id/activity_start_register_image_avator"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/avator" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_start_register_text_nick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nickname" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_start_register_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_start_register_text_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"/>

                    <RadioButton
                        android:id="@+id/activity_start_register_radiobutton_sexman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:checked="true"
                        android:text="@string/register_detail_info_fragment_sex_men" />

                    <RadioButton
                        android:id="@+id/activity_start_register_radiobutton_sexwoman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/register_detail_info_fragment_sex_women" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_detail_info_fragment_birthday" />

                    <TextView
                        android:id="@+id/activity_start_register_textview_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_start_register_text_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/security_code"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/activity_start_register_button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="?attr/colorPrimary"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/register_now" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>
