<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fat246.cybercar.fragments.RegisterDetailInfoFragment">

    <!-- TODO: Set User Detail Info -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.fat246.cybercar.openwidgets.CircleImageView
                android:layout_width="@dimen/register_detail_info_fragment_circleimageview_size"
                android:layout_height="@dimen/register_detail_info_fragment_circleimageview_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:src="@drawable/avator" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_register_detail_info_textinputlayout_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fragment_register_detail_info_edittext_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:hint="@string/register_basic_info_fragment_method_mobile_number"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fragment_register_detail_info_textinputlayout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fragment_register_detail_info_edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:hint="@string/register_basic_info_fragment_method_email_address"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fragment_register_detail_info_edittext_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:hint="@string/register_detail_info_fragment_nickname" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_detail_info_fragment_sex" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fragment_register_detail_info_radiobutton_sexman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/register_detail_info_fragment_sex_men" />

                    <RadioButton
                        android:id="@+id/fragment_register_detail_info_radiobutton_sexwoman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/register_detail_info_fragment_sex_women" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_detail_info_fragment_birthday" />

                <TextView
                    android:id="@+id/fragment_register_detail_info_textview_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin" />
            </LinearLayout>

            <Button
                android:id="@+id/fragment_register_detail_info_button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_detail_info_fragment_submit" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
